fixed spacing

--- a/public/bootstrap.css
+++ b/public/bootstrap.css
@@ -67,7 +67,7 @@
 *,
 ::after,
 ::before {
-  box-sizing: border-box;
+ 
 }
 @media (prefers-reduced-motion: no-preference) {
   :root {
@@ -9900,21 +9900,20 @@ fieldset:disabled .btn {
 iframe {
   border-color: black;
   justify-content: flex-end;
+  size-adjust: inherit;
   border-width: 2px;
   border-style: solid;
   width: 100%;
   height: 43.25rem;
   margin-left: 2rem;
-  margin-right: 2rem;
+
 }
 
 .leftcard {
-  width: 20%;
-
-  background-color: #f5f5f5;
+  width: 21rem;
   border-radius: 0.5rem;
-  margin-right: 2rem;
-  margin-left: 2rem;
+  margin-right: 0rem;
+  margin-left: 3rem;
   margin-top: 3rem;
   margin-bottom: 2rem;
   display: flex;
